--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     <version>${asm.version}</version>
   </dependency>
   <dependency>
+    <groupId>org.ow2.asm</groupId>
+    <artifactId>asm-debug-all</artifactId>
+    <version>${asm.version}</version>
+  </dependency>
+  <dependency>
     <groupId>com.google.collections</groupId>
     <artifactId>google-collections</artifactId>
     <version>${google.collections.version}</version>
