--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <apache.commons.cli.version>1.3.1</apache.commons.cli.version>
     <gson.version>2.8.0</gson.version>
     <wffweb.version>2.1.4</wffweb.version>
+    <velocity.version>1.7</velocity.version>
     <java.version>1.8</java.version>
     <mvn.assembly.plugin.version>2.4.1</mvn.assembly.plugin.version>
     <slf4j.api.version>1.7.22</slf4j.api.version>
@@ -77,6 +78,11 @@
     <groupId>com.webfirmframework</groupId>
     <artifactId>wffweb</artifactId>
     <version>${wffweb.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.velocity</groupId>
+    <artifactId>velocity</artifactId>
+    <version>${velocity.version}</version>
   </dependency>
   <!-- decompile -->
   <dependency>
