--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <junit.version>4.12</junit.version>
     <jar.cli>cba-cli-${version}</jar.cli>
     <procyon-version>0.5.32</procyon-version>
+    <jgrapht.version>1.0.1</jgrapht.version>
   </properties>
 
 <dependencies>
@@ -78,6 +79,13 @@
     <artifactId>velocity</artifactId>
     <version>${velocity.version}</version>
   </dependency>
+  <!-- graph -->
+  <dependency>
+    <groupId>org.jgrapht</groupId>
+    <artifactId>jgrapht-core</artifactId>
+    <version>${jgrapht.version}</version>
+  </dependency>
+
   <!-- decompile -->
   <dependency>
     <groupId>org.bitbucket.mstrobel</groupId>
